--- a/src/app/formulario/formulario.component.html
+++ b/src/app/formulario/formulario.component.html
@@ -5,25 +5,25 @@
       <label>Valor do imóvel:</label>
       <div class="input-group">
         <span class="input-group-addon">R$</span>
-        <input [(ngModel)]="usuario.valorImovel" type="number" class="form-control input-sm" id="valor-imovel" min="0" step="25000" autofocus>
+        <input [(ngModel)]="valorImovel" type="number" class="form-control input-sm" id="valor-imovel" min="0" step="25000" autofocus>
       </div>
     </div>
     <div class="form-group">
       <label>Disponibilidade</label>
       <div class="input-group">
         <span class="input-group-addon">R$</span>
-        <input [(ngModel)]="usuario.disponivel" type="number" class="form-control input-sm" id="disponibilidade" min="0" step="5000">
+        <input [(ngModel)]="disponivel" type="number" class="form-control input-sm" id="disponibilidade" min="0" step="5000">
       </div>
     </div>
     <div class="form-group">
       <label>Prestações</label>
-      <input [(ngModel)]="usuario.prestacoes" type="number" class="form-control input-sm" id="prestacoes" min="0" max="480">
+      <input [(ngModel)]="prestacoes" type="number" class="form-control input-sm" id="prestacoes" min="0" max="480">
     </div>
     <div class="form-group">
       <label>Renda Mensal</label>
       <div class="input-group">
         <span class="input-group-addon">R$</span>
-        <input [(ngModel)]="usuario.renda" type="number" class="form-control input-sm" id="renda" min="0" step="100">
+        <input [(ngModel)]="renda" type="number" class="form-control input-sm" id="renda" min="0" step="100">
       </div>
     </div>
     <div class="form-group">
@@ -31,15 +31,14 @@
       <input [(ngModel)]="nascimento" type="date" class="form-control input-sm" id="nascimento">
     </div>
     <div class="form-group">
-      <label><input [(ngModel)]="usuario.usaFGTS" type="checkbox" value="true"> Possui FGTS</label>
+      <label><input [(ngModel)]="possuiFgtsModel" type="checkbox" value="true"> Possui FGTS</label>
     </div>
-    <div class="form-group" [hidden]="!usuario.usaFGTS">
+    <div class="form-group" [hidden]="!possuiFGTS">
       <label>FGTS acumulado</label>
-      <input [(ngModel)]="usuario.FGTS" type="number" class="form-control input-sm" id="fgts" min="0" step="1000">
+      <input [(ngModel)]="fgtsAcumulado" type="number" class="form-control input-sm" id="fgts" min="0" step="1000">
     </div>
     <div class="form-group text-center">
       <button type="button" [disabled]="!validaForm()" (click)="calcular()" class="btn btn-primary btn-sm">Calcular</button>
     </div>
   </div>
 </div>
-
