Populando o grafico com os dados do financiamento

--- a/src/app/financiamento/financiamento.component.html
+++ b/src/app/financiamento/financiamento.component.html
@@ -46,7 +46,7 @@
               </div>
               <div class="col-lg-8">
                 <div>
-                  <app-grafico-financiamento-2></app-grafico-financiamento-2>
+                  <app-grafico-financiamento-2 [financiamento]="financiamento"></app-grafico-financiamento-2>
                 </div>
               </div>
             </div>
