--- a/src/app/financiamento/financiamento.component.html
+++ b/src/app/financiamento/financiamento.component.html
@@ -21,6 +21,7 @@
               <button class="btn btn-sm btn-warning text-center" (click)="exibeAvancado()">Avançado</button>
               <button class="btn btn-sm btn-warning text-center" (click)="exibeFluxoDeCaixa()">Fluxo de Caixa</button>
               <button class="btn btn-sm btn-warning text-center" (click)="exibeResultado()">Resultado</button>
+              <button class="btn btn-sm btn-warning text-center" (click)="exibeExtrato()">Extrato FGTS</button>
             </div>
             <div *ngIf=!calculado>Calculando...</div>
         </div>        
@@ -48,6 +49,11 @@
                 <div>
                   <app-grafico-financiamento-2 [financiamento]="financiamento"></app-grafico-financiamento-2>
                 </div>
+              </div>
+            </div>
+            <div *ngIf="fgts">
+              <div class="col-lg-12">
+                <app-extrato-fgts></app-extrato-fgts>
               </div>
             </div>
           </div>          
