--- a/src/app/extrato-fgts/extrato-fgts.component.html
+++ b/src/app/extrato-fgts/extrato-fgts.component.html
@@ -6,22 +6,26 @@
         <thead>
           <tr>
             <th class="col-1">N</th>
-            <th class="text-right">Saldo Devedor</th>
+            <th class="text-right">Saldo</th>
             <th class="text-right">Correção TR</th>
-            <th class="text-right">Saldo Corrigido</th>
-            <th class="text-right">Amortização</th>
-            <th class="text-right">FGTS</th>
+            <th class="text-right">Créditos</th>
+            <th class="text-right">Resgate</th>
+            <th class="text-right">Total FGTS</th>
+            <th class="text-right">Variação</th>
+            <th class="text-right">Variação VP</th>
           </tr>
         </thead>
         <tbody>
-          <!--<tr *ngFor="let p of financiamento.Prestacoes; let i=index">
+          <tr [ngClass]="{ 'danger' : p.Resgate > 0 }" *ngFor="let p of financiamento.ExtratoFgts; let i=index">
             <td>{{i}}</td>
-            <td class="text-right">{{p.saldoDevedor1 | number:'1.2-2' }}</td> 
-            <td class="text-right">{{p.correcaoTR | number:'1.2-2' }}</td>
-            <td class="text-right">{{p.saldoDevedor2 | number:'1.2-2' }}</td>
-            <td class="text-right">{{p.amortizacao | number:'1.2-2' }}</td>
-            <td class="text-right">{{p.amortizacao | number:'1.2-2' }}</td>
-          </tr>-->
+            <td class="text-right">{{p.Saldo | number:'1.2-2' }}</td> 
+            <td class="text-right">{{p.CorrecaoTR | number:'1.2-2' }}</td>
+            <td class="text-right">{{p.Creditos | number:'1.2-2' }}</td>
+            <td class="text-right">{{p.Resgate | number:'1.2-2' }}</td>
+            <td class="text-right">{{p.TotalFgts | number:'1.2-2' }}</td>
+            <td class="text-right">{{p.Variacao | number:'1.2-2' }}</td>
+            <td class="text-right">{{p.VariacaoVP | number:'1.2-2' }}</td>
+          </tr>
         </tbody>
       </table>
     </div>
