Correcao do calculo da idade do usuario

--- a/src/app/financiamento-propriedades/financiamento-propriedades.component.html
+++ b/src/app/financiamento-propriedades/financiamento-propriedades.component.html
@@ -30,7 +30,7 @@
       </div>
       <div *ngIf="usuario.usaFGTS">
         <div class="form-group">
-          <label><input [(ngModel)]="fgtsConfig.Entrada" type="checkbox" value="true"> Abater da entrada</label>
+          <label><input [(ngModel)]="fgtsConfig.Entrada" type="checkbox" value="true"> Usar o FGTS para dar entrada no imóvel</label>
         </div>
         <div class="form-group">
           <label>Novos Créditos de FGTS</label>
