--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-default">
-  <div class="container-fluid">
+  <div class="navi container-fluid">
     <app-menu-superior></app-menu-superior>
   </div>
 </nav>
