--- a/src/app/financiamento-propriedades/financiamento-propriedades.component.html
+++ b/src/app/financiamento-propriedades/financiamento-propriedades.component.html
@@ -1,46 +1,37 @@
 <div class="panel panel-default">
-  <div class="panel-heading">Propriedades</div>
+  <div class="panel-heading">Configurações</div>
   <div class="panel-body">      
-      <div class="row">
-        <div class="form-group col-lg-6">  
-          <label>Taxa Admnistrativa:</label>
-            <input [(ngModel)]="config.TaxaAdministrativa" type="number" class="form-control input-sm" step="5">
-        </div>
-        <div class="form-group col-lg-6">
-          <label>Juros Mensais</label>
-            <input [(ngModel)]="config.JurosMensais" type="number" class="form-control input-sm" step="0.01">
-        </div>
+    <div class="form-group">
+      <label>Juros Anuais</label>
+      <div class="input-group">
+        <input [(ngModel)]="config.JurosMensais" type="number" class="form-control input-sm" step="0.01">
+        <span class="input-group-addon">{{ config.JurosMensais | percent:'1.3-3' }}</span>
       </div>
-      <div class="row">
-        <div class="form-group col-lg-6">
-          <label>TR Mensal</label>
-          <input [(ngModel)]="config.TRMensal" type="number" class="form-control input-sm" step="0.01">
-        </div>
-        <div class="form-group col-lg-6">
-          <label>Rentabilidade</label>
-            <input [(ngModel)]="config.Rentabilidade" type="number" class="form-control input-sm" step="0.01">
-        </div>
+    </div>
+    <div class="form-group">
+      <label>TR Mensal</label>
+      <div class="input-group">
+        <input [(ngModel)]="config.TRMensal" type="number" class="form-control input-sm" step="0.01">
+        <span class="input-group-addon">{{ config.TRMensal | percent:'1.3-3' }}</span>              
       </div>
-      <div class="form-group">
-        <label>Seguros</label>
-        <select class="form-control input-sm" (change)="selecionaSeguro($event)">
-          <option value="sa" selected>Sul América</option>
-          <option value="hdi">HDI</option>
-        </select>
+    </div>
+    <div class="form-group">
+      <label>Rentabilidade</label>
+      <div class="input-group">
+        <input [(ngModel)]="config.Rentabilidade" type="number" class="form-control input-sm" step="0.01">
+        <span class="input-group-addon">{{ config.Rentabilidade | percent:'1.3-3' }}</span>
       </div>
-      <div *ngIf="usuario.usaFGTS">
-        <div class="form-group">
-          <label><input [(ngModel)]="fgtsConfig.Entrada" type="checkbox" value="true"> Usar o FGTS para dar entrada no imóvel</label>
-        </div>
-        <div class="form-group">
-          <label>Novos Créditos de FGTS</label>
-            <select [(ngModel)]="fgtsConfig.Posterior" class="form-control input-sm">
-              <option value="1">Abater do saldo devedor</option>
-              <option value="2">Abater das próximas parcela</option>
-              <option value="0">Não usar mais</option>
-            </select>
-        </div>
-      </div>
+    </div>
+    <div class="form-group">  
+      <label>Taxa Admnistrativa:</label>
+      <input [(ngModel)]="config.TaxaAdministrativa" type="number" class="form-control input-sm" step="5">
+    </div>
+    <div class="form-group">
+      <label>Seguros</label>
+      <select class="form-control input-sm" (change)="selecionaSeguro($event)">
+        <option value="sa" selected>Sul América</option>
+        <option value="hdi">HDI</option>
+      </select>
+    </div>
   </div>
 </div>
-
