Implementacao do ajuste salarial anual com base numa porcentagem configuravel

--- a/src/app/financiamento/financiamento.component.html
+++ b/src/app/financiamento/financiamento.component.html
@@ -35,6 +35,11 @@
                   [config]="financiamentoConfig">        
                 </app-financiamento-propriedades>
               </div>
+              <div *ngIf="usuario.usaFGTS">
+                <div class="col-lg-4">
+                  <app-fgts [usuario]="usuario" [fgtsConfig]="fgtsConfig"></app-fgts>
+                </div>
+            </div>    
             </div>            
             <div *ngIf="fluxoDeCaixa">
               <div class="col-lg-12">
