--- a/src/app/fgts/fgts.component.html
+++ b/src/app/fgts/fgts.component.html
@@ -12,7 +12,7 @@
       <label>Expectativa de crescimento salarial anual</label>
       <div class="input-group">
         <input [(ngModel)]="usuario.crescimentoSalarial" type="number" class="form-control input-sm" step="0.01">
-        <span class="input-group-addon">{{ usuario.crescimentoSalarial | percent:'1.3-3' }}</span>              
+        <span class="input-group-addon percent">{{ usuario.crescimentoSalarial | percent:'1.3-3' }}</span>              
       </div>
     </div>
       <div class="form-group">
