--- a/src/app/financiamento-propriedades/financiamento-propriedades.component.html
+++ b/src/app/financiamento-propriedades/financiamento-propriedades.component.html
@@ -4,27 +4,29 @@
     <div class="form-group">
       <label>Juros Anuais</label>
       <div class="input-group">
-        <input [(ngModel)]="config.JurosMensais" type="number" class="form-control input-sm" step="0.01">
-        <span class="input-group-addon">{{ config.JurosMensais | percent:'1.3-3' }}</span>
+        <input [(ngModel)]="config.JurosAnuais" type="number" class="form-control input-sm" step="0.01">
+        <span class="input-group-addon percent">{{ config.JurosAnuais | percent:'1.3-3' }}</span>
       </div>
     </div>
     <div class="form-group">
       <label>TR Mensal</label>
       <div class="input-group">
         <input [(ngModel)]="config.TRMensal" type="number" class="form-control input-sm" step="0.01">
-        <span class="input-group-addon">{{ config.TRMensal | percent:'1.3-3' }}</span>              
+        <span class="input-group-addon percent">{{ config.TRMensal | percent:'1.3-3' }}</span>              
       </div>
     </div>
     <div class="form-group">
       <label>Rentabilidade</label>
       <div class="input-group">
         <input [(ngModel)]="config.Rentabilidade" type="number" class="form-control input-sm" step="0.01">
-        <span class="input-group-addon">{{ config.Rentabilidade | percent:'1.3-3' }}</span>
+        <span class="input-group-addon percent">{{ config.Rentabilidade | percent:'1.3-3' }}</span>
       </div>
     </div>
     <div class="form-group">  
       <label>Taxa Admnistrativa:</label>
-      <input [(ngModel)]="config.TaxaAdministrativa" type="number" class="form-control input-sm" step="5">
+      <div class="input-group">
+        <span class="input-group-addon">R$</span>
+        <input [(ngModel)]="config.TaxaAdministrativa" type="number" class="form-control input-sm" step="5">
     </div>
     <div class="form-group">
       <label>Seguros</label>
