--- a/src/app/menu-superior/menu-superior.component.html
+++ b/src/app/menu-superior/menu-superior.component.html
@@ -1,5 +1,5 @@
 <div class="navbar-header">
-  <a class="navbar-brand" [routerLink]="['/home']">{{title}}</a>
+  <a class="navbar-brand" [routerLink]="['/home']"><span class="glyphicon glyphicon-home"></span>{{title}}</a>
 </div>
 <ul class="nav navbar-nav">
   <li><a [routerLink]="['/financiamento']">{{financiamento}}</a></li>
