--- a/src/app/resultado/resultado.component.html
+++ b/src/app/resultado/resultado.component.html
@@ -25,7 +25,7 @@
                 </tr>
                 <tr>
                     <td>Prazo total</td>
-                    <td class="number">{{financiamento.Prestacoes.length }}</td>
+                    <td class="number">{{financiamento.Prestacoes.length-1 }}</td>
                 </tr>
             </tbody>    
         </table>
