--- a/src/app/financiamento/financiamento.component.html
+++ b/src/app/financiamento/financiamento.component.html
@@ -25,6 +25,7 @@
               <button id="resultado" class="btn btn-sm btn-warning text-center" (click)="exibeResultado()">Resultado</button>
               <button id="fdc" class="btn btn-sm btn-warning text-center" (click)="exibeFluxoDeCaixa()">Fluxo de Caixa</button>
               <button id="fgts" class="btn btn-sm btn-warning text-center" (click)="exibeExtrato()">Extrato FGTS</button>
+              <button id="save" class="btn btn-sm btn-primary text-center" (click)="exibeSaveScreen()">Salvar</button>
             </div>
         </div>        
         <div class="panel-body">
@@ -61,7 +62,12 @@
                 <app-extrato-fgts [financiamento]="financiamento"></app-extrato-fgts>
               </div>
             </div>
-          </div>          
+            <div *ngIf="saveScreen">
+              <div class="col-lg-12">
+                <app-financiamento-save [financiamento]='financiamento'></app-financiamento-save>
+              </div>
+            </div>
+          </div>      
       </div>
     </div>
   </div>
