--- a/src/app/aluguel/aluguel.component.html
+++ b/src/app/aluguel/aluguel.component.html
@@ -1,52 +1,27 @@
-<div class="panel panel-default">
-  <div class="panel-heading">Comparação entre financiamento e aluguel</div>
-  <div class="panel-body">      
-    <div class="table table-responsive">  
-      <table class="table  table-striped table-condensed">
-        <thead>
-          <tr>
-            <th class="col-1">N</th>
-            <th class="text-right">Aluguel</th>
-            <th class="text-right">Parcela</th>
-            <th class="text-right">Rend. Fundo</th>
-            <th class="text-right">Depos. Fundo</th>
-            <th class="text-right">Mont. Fundo</th>
-            <th class="text-right">Rend. FGTS</th>
-            <th class="text-right">Depos. FGTS</th>
-            <th class="text-right">Mont. FGTS</th>
-            <th class="text-right">Saldo Parcial</th>
-            <th class="text-right">Patri. Aluguel</th>
-            <th class="text-right">VPL</th>
-            <th class="text-right">Patri. Finan</th>
-            <th class="text-right">Rend. Finan</th>
-            <th class="text-right">Depos. Finan</th>
-            <th class="text-right">Mont. Finan</th>
-            <th class="text-right">Patri Fin Total</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let ext of extrato; let i=index">
-            <td>{{i}}</td>
-            <td class="text-right">{{ext.Aluguel | number:'1.2-2'}}</td> 
-            <td class="text-right">{{ext.Parcela | number:'1.2-2'}}</td> 
-            <td class="text-right">{{ext.RendimentoFundo | number:'1.2-2'}}</td> 
-            <td class="text-right">{{ext.DepositoFundo | number:'1.2-2'}}</td> 
-            <td class="text-right">{{ext.MontanteInvestimento | number:'1.2-2'}}</td> 
-            <td class="text-right">{{ext.RendimentoFGTS | number:'1.2-2'}}</td> 
-            <td class="text-right">{{ext.DepositoFGTS | number:'1.2-2'}}</td> 
-            <td class="text-right">{{ext.MontanteFGTS | number:'1.2-2'}}</td> 
-            <td class="text-right">{{ext.SaldoParcial() | number:'1.2-2'}}</td> 
-            <td class="text-right">{{ext.Patrimonio() | number:'1.2-2'}}</td> 
-            <td class="text-right">{{ext.ValorPresente | number:'1.2-2'}}</td> 
-            <td class="text-right">{{ext.PatrimonioFinanciamento | number:'1.2-2'}}</td> 
-            <td class="text-right">{{ext.RendimentoFinInvestimento | number:'1.2-2'}}</td> 
-            <td class="text-right">{{ext.DepositoFinInvestimento | number:'1.2-2'}}</td> 
-            <td class="text-right">{{ext.MontanteFinInvestimento | number:'1.2-2'}}</td> 
-            <td class="text-right">{{ext.PatrimonioFinTotal() | number:'1.2-2'}}</td> 
-          </tr>
-        </tbody>
-      </table>
+<div class="row">
+  <div class="col-lg-3">
+    <app-formulario-aluguel (sendFinanciamento)="onComparar($event)"></app-formulario-aluguel>
+  </div>  
+  <div class="col-lg-9" *ngIf="calculado">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+          <div *ngIf="calculado">
+            <button id="grafico" class="btn btn-sm btn-warning text-center" (click)="exibeGrafico()">Gráfico</button>
+            <button id="fdc" class="btn btn-sm btn-warning text-center" (click)="exibeFluxoDeCaixa()">Fluxo de Caixa</button>
+          </div>
+      </div>        
+      <div class="panel-body">
+        <div class="row">            
+          <div class="col-lg-12" *ngIf="fluxoDeCaixa">
+            <app-extrato-aluguel [extratoAluguel]="extratoAluguel"></app-extrato-aluguel>
+          </div>
+        </div>
+        <div class="row" *ngIf="grafico">            
+          <div class="col-lg-12">
+            <app-grafico-aluguel [extratoAluguel]="extratoAluguel"></app-grafico-aluguel>
+          </div>
+        </div>      
+      </div>
     </div>
   </div>
 </div>
-
