--- a/src/app/fgts/fgts.component.html
+++ b/src/app/fgts/fgts.component.html
@@ -22,7 +22,7 @@
       </div>  
       <div class="form-group">
         <label>Novos Créditos de FGTS</label>
-        <select [(ngModel)]="fgtsConfig.Posterior" class="form-control input-sm">
+        <select (change)="onChangePosterior($event.target.value)" class="form-control input-sm">
           <option value="1">Abater do saldo devedor</option>
           <option value="2">Abater das próximas parcela</option>
           <option value="0">Não usar mais</option>
