--- a/src/app/aluguel/formulario-aluguel/formulario-aluguel.component.html
+++ b/src/app/aluguel/formulario-aluguel/formulario-aluguel.component.html
@@ -10,8 +10,8 @@
     <div class="row">
       <div class="form-group">
         <label>Selecione um financiamento:</label>
-        <select class="form-control" [(ngModel)]="financiamentoSelecionado">
-          <option>Selecione</option>
+        <select class="form-control" [(ngModel)]="financiamentoSelecionado" (change)="onChangeFinanciamento()">
+          <option [value]="null">Selecione</option>
           <option *ngFor="let fin of financiamentos" [ngValue]="fin">{{fin.Identificacao}}</option>
         </select>
       </div>
