--- a/src/app/aluguel/formulario-aluguel/formulario-aluguel.component.html
+++ b/src/app/aluguel/formulario-aluguel/formulario-aluguel.component.html
@@ -11,7 +11,7 @@
       <div class="form-group">
         <label>Selecione um financiamento:</label>
         <select class="form-control" [(ngModel)]="financiamentoSelecionado" (change)="onChangeFinanciamento()">
-          <option [value]="null">Selecione</option>
+          <option [ngValue]="null">Selecione</option>
           <option *ngFor="let fin of financiamentos" [ngValue]="fin">{{fin.Identificacao}}</option>
         </select>
       </div>
@@ -22,7 +22,7 @@
       </div>
     </div>
     <div class="row text-center">
-      <button class="btn btn-primary" (click)="comparar()">Comparar</button>
+      <button [disabled]="!isValid()" class="btn btn-primary" (click)="comparar()">Comparar</button>
     </div>
   </div>
 </div>
