--- a/src/app/financiamento-save/financiamento-save.component.html
+++ b/src/app/financiamento-save/financiamento-save.component.html
@@ -8,7 +8,7 @@
     <textarea [disabled]="isAdicionado" class="form-control" [(ngModel)]="description" name="desc" rows="4">{{description}}</textarea>
   </div>
   <div class="form-group">
-    <button [disabled]="isAdicionado" (click)="adicionar()"class="btn btn-primary">Salvar</button>
+    <button [disabled]="isAdicionado || !isValid()" (click)="adicionar()"class="btn btn-primary">Salvar</button>
     <button [disabled]="isAdicionado" (click)="sugerir()" class="btn btn-primary">Sugerir</button>
   </div>
 </form>
