Configurations component, model and route

--- a/src/app/menu-superior/menu-superior.component.html
+++ b/src/app/menu-superior/menu-superior.component.html
@@ -6,5 +6,8 @@
   <li routerLinkActive="active"><a [routerLink]="['/aluguel']">{{aluguel}}</a></li>
   <li routerLinkActive="active"><a [routerLink]="['/consorcio']">{{consorcio}}</a></li>
 </ul>
+<ul class="nav navbar-nav navbar-right">
+  <li routerLinkActive="active" class="text-right"><a [routerLink]="['/configuracoes']">{{global}}</a></li>
+</ul>
 
 
