Changing fgts label

--- a/src/app/fgts/fgts.component.html
+++ b/src/app/fgts/fgts.component.html
@@ -2,7 +2,7 @@
   <div class="panel-heading">Fundo de Garantia</div>
   <div class="panel-body">
     <div class="form-group">
-      <label>FGTS acumulado</label>
+      <label>Saldo FGTS</label>
       <div class="input-group">
         <span class="input-group-addon">R$</span>
         <input [(ngModel)]="usuario.FGTS" type="number" class="form-control input-sm" min="0" step="1000">
