--- a/src/app/aluguel/formulario-aluguel/formulario-aluguel.component.html
+++ b/src/app/aluguel/formulario-aluguel/formulario-aluguel.component.html
@@ -1,27 +1,24 @@
 <div class="panel panel-default">
   <div class="panel-heading">Formulário Aluguel</div>
   <div class="panel-body">
-    <div class="row">
-      <div class="form-group">
-        <label>Valor inicial do aluguel:</label>
+    <div class="form-group">
+      <label>Valor inicial do aluguel:</label>
+      <div class="input-group">
+        <span class="input-group-addon">R$</span>
         <input type="number" class="form-control" [(ngModel)]="aluguelInicial" placeholder="Parcela mensal, exemplo: R$2.000">
       </div>
     </div>
-    <div class="row">
-      <div class="form-group">
-        <label>Selecione um financiamento:</label>
-        <select class="form-control" [(ngModel)]="financiamentoSelecionado" (change)="onChangeFinanciamento()">
-          <option [ngValue]="null">Selecione</option>
-          <option *ngFor="let fin of financiamentos" [ngValue]="fin">{{fin.Identificacao}}</option>
-        </select>
-      </div>
+    <div class="form-group">
+      <label>Selecione um financiamento:</label>
+      <select class="form-control" [(ngModel)]="financiamentoSelecionado" (change)="onChangeFinanciamento()">
+        <option [ngValue]="null">Selecione</option>
+        <option *ngFor="let fin of financiamentos" [ngValue]="fin">{{fin.Identificacao}}</option>
+      </select>
     </div>
-    <div class="row">
-      <div class="form-group">
-        <textarea class="form-control" rows="5">{{descricaoFinanciamento}}</textarea>
-      </div>
+    <div class="form-group">
+      <textarea class="form-control" rows="5">{{descricaoFinanciamento}}</textarea>
     </div>
-    <div class="row text-center">
+    <div class="form-group text-center">
       <button [disabled]="!isValid()" class="btn btn-primary" (click)="comparar()">Comparar</button>
     </div>
   </div>
