--- a/src/app/aluguel/aluguel.component.html
+++ b/src/app/aluguel/aluguel.component.html
@@ -24,7 +24,7 @@
         </div>
         <div class="row" *ngIf="resultado">            
           <div class="col-lg-12">
-            <app-aluguel-resultado [extratoAluguel]="extratoAluguel"></app-aluguel-resultado>
+            <app-aluguel-resultado [extratoAluguel]="extratoAluguel" [comparador]="comparador"></app-aluguel-resultado>
           </div>
         </div>    
       </div>
