--- a/src/app/financiamento/financiamento.component.html
+++ b/src/app/financiamento/financiamento.component.html
@@ -29,8 +29,11 @@
             </div>
         </div>        
         <div class="panel-body">
-          <div class="row">            
-            <div *ngIf="avancado">
+          <div class="row">
+              <div class="col-lg-12">
+                <app-tabela-vpl [extrato]="extrato"></app-tabela-vpl>
+              </div>           
+            <!--<div *ngIf="avancado">
               <div class="col-lg-4">
                 <app-financiamento-propriedades  
                   [config]="financiamentoConfig">        
@@ -45,7 +48,7 @@
             <div *ngIf="fluxoDeCaixa">
               <div class="col-lg-12">
                 <app-tabela-vpl [financiamento]="financiamento"></app-tabela-vpl>
-              </div>            
+              </div>         
             </div>
             <div *ngIf="resultado">
               <div class="col-lg-5">
@@ -66,7 +69,7 @@
               <div class="col-lg-12">
                 <app-financiamento-save [financiamento]='financiamento'></app-financiamento-save>
               </div>
-            </div>
+            </div>-->
           </div>      
       </div>
     </div>
